--- a/{{experiment_name}}.Rmd
+++ b/{{experiment_name}}.Rmd
@@ -32,7 +32,7 @@ number_of_expansion_mice <-
 number_of_groups <- 4
 mice_per_group <- 
 labels <- c("1" = "AAA", "2" = "BBB", "3" = "CCC", "4" = "DDD")
-filtered_mice <- c(21:24, 26:40, 43)
+filtered_mice <- c(   )
 
 # Load packages
 library(tidyverse)
