--- a/{{experiment_name}}.Rmd
+++ b/{{experiment_name}}.Rmd
@@ -1,7 +1,6 @@
 ---
-title:
-status:
-sample:
+title: "NA"
+sample: 25
 output:
   flexdashboard::flex_dashboard:
     source_code: embed
@@ -9,33 +8,37 @@ output:
     orientation: columns
     theme: 
       version: 4
-      bootswatch: minty
+      bootswatch: cosmo
 runtime: shiny
 ---
 
 ```{r user_defined_parameters, message=FALSE}
 # The user defines different variables and parameters that will be specific to the study.
 
-inj_date <- as.Date("na", format = "%m/%d/%Y")
+inj_date <- as.POSIXct(as.Date("na", format = "%m/%d/%Y"), tz = "GMT")
 
-trt_date <- as.Date("na", format = "%m/%d/%Y")
+trt_date <- as.POSIXct(as.Date("na", format = "%m/%d/%Y"), tz = "GMT")
 
-eos_date <- as.Date("na", format = "%m/%d/%Y")
+eos_date <- as.POSIXct(as.Date("na", format = "%m/%d/%Y"), tz = "GMT")
 
 engraftment_imaging_date <- as.Date("na", format = "%m/%d/%Y")
 
-dates <- as.Date(c("na", "na", "na", "na"), format = "%m/%d/%Y")
+dates <- as.POSIXct(as.Date(c("na", "na", "na", "na", "na", "na"), format = "%m/%d/%Y"), tz = "GMT")
 
-number_of_groups <- #
-mice_per_group <- #
-filtered_mice <- c(#:#)
-labels <- c("1" = "AAA", "2" = "BBB", "3" = "CCC", "4" = "DDD")
+number_of_groups <- 4
+mice_per_group <- 5
+filtered_mice <- c(1:25)
+labels <- c("0" = "Non-study", "1" = "na", "2" = "na", "3" = "na", "4" = "na")
+pal <- c("Non-study" = "#000000", "na" = "#f8766d", "na" = "#7cae00", "na" = "#00bfc4", "na" = "#C3B1E1")
+
+# Link to organization logo
+src <- "na"
 ```
 
 ```{r Load Libraries, message=FALSE}
 # Set root.dir to the current file's directory
 knitr::opts_knit$set(root.dir = dirname(rstudioapi::getSourceEditorContext()$path))
-#setwd(dirname(rstudioapi::getSourceEditorContext()$path)) i run this when i execute code locally by chunk
+#setwd(dirname(rstudioapi::getSourceEditorContext()$path))
 
 # Load packages
 library(flexdashboard) # dashboard view for multiple panes
@@ -109,7 +112,7 @@ write_csv(processed_data, file = "data/processed/processed_data.csv")
 ```
 
 ```{r Treatment Assignment, message=FALSE, warning=FALSE}
-# Randomly assign mice to treatment conditions so that each treatment condition has equivalent total_flux between treatments. All of the unassigned remaining mice have the lowest total_flux and are assigned to trt = na aka the expansion group/untreated group. Basically this function runs through 5000 seeds for random group combinations, then performs ANOVAs on the group means for each combination, then returns the seed with the lowest standard deviation of mean total_flux across groups.
+# Randomly assign mice to treatment conditions so that each treatment condition has equivalent total_flux between treatments. All of the unassigned remaining mice have the lowest total_flux and are assigned to trt = na aka the expansion group/untreated group.
 
 # Load data
 processed_data <- read.csv("data/processed/processed_data.csv")
@@ -211,14 +214,15 @@ assign_groups <- function(data, num_groups, num_per_group) {
 # Call the function to assign groups using filtered_data
 result <- assign_groups(filtered_data, number_of_groups, mice_per_group)
 
-# Rename the Group column in the result$Mean_Total_Flux data frame
-result$Mean_Total_Flux$Group <- labels
-
+# Add trt_factor and trt to processed_data data frame.
+# NA trt_factor values become 0 and trt becomes Non-study
+# Add trt_factor and trt to processed_data data frame
 processed_data <- processed_data %>%
-  left_join(result$Data %>% select(id, trt), by = "id") %>%
-  mutate(trt = coalesce(trt.x, trt.y)) %>%
-  select(-trt.x, -trt.y) %>%
-  select(id, trt, everything()) %>%
+  left_join(result$Data %>% select(id, trt_factor), by = "id") %>%
+  mutate(trt_factor = as.factor(ifelse(is.na(trt_factor), "0", trt_factor))) %>%
+  select(id, trt_factor, everything()) %>%
+  mutate(trt = factor(trt_factor, levels = names(labels), labels = labels)) %>%
+  relocate(trt_factor, .before = trt_injection_vial) %>% 
   relocate(trt, .before = trt_injection_vial)
   
 # Write the 'processed_data' data frame to a CSV file
@@ -234,196 +238,164 @@ Column {.tabset data-width=600}
 
 ```{r Treatment Plot, message=FALSE, warning=FALSE, fig.height=40, fig.width=11}
 # Load data
-processed_data <- read.csv("data/processed/processed_data.csv")
+processed_data <- read.csv("data/processed/processed_data.csv") %>%
+  mutate(imaging_date = as.POSIXct(imaging_date, tz = "GMT")) %>%
+  mutate(days_from_trt = as.numeric(difftime(imaging_date, trt_date, units = "days"))) %>% 
+  relocate(days_from_trt, .before = imaging_date)
 
+# Define UI
 ui <- fluidPage(
-  titlePanel("Data Visualization"),
+  
   sidebarLayout(
     sidebarPanel(
-      selectInput("tumor_injection_select", "Tumor Injection", choices = unique(processed_data$tumor_injection)),
-      checkboxInput("facet_wrap", "Facet Wrap", value = TRUE),
-      selectInput("y_variable", "Y-Axis Variable", choices = c("total_flux", "avg_radiance"), selected = "total_flux"),
-      selectInput("calculation_type", "Calculation Type", choices = c("Mean", "Median", "Individual"), selected = "Mean"),
-      checkboxInput("group_points", "Group Points", value = TRUE),
-      selectInput("plot_type", "Plot Type", choices = c("Line Graph", "Bar Graph"), selected = "Line Graph")
+      # Dropdown for PDX (tumor_injection) selection
+      selectInput("pdx", "PDX:",
+                  choices = unique(processed_data$tumor_injection),
+                  selected = unique(processed_data$tumor_injection)[1]),
+      
+      # Dropdown for Y-axis selection
+      selectInput("y_axis", "Y-axis:",
+                  choices = c("Flux" = "total_flux", "Radiance" = "avg_radiance"),
+                  selected = "total_flux"),
+      
+      # Checkbox for including non-study mice
+      checkboxInput("include_non_study", "Include non-study mice", value = FALSE),
+      
+      # Dropdown for Calculation Type
+      selectInput("calculation_type", "Calculation Type:",
+                  choices = c("Mean", "Median", "Individual"),
+                  selected = "Mean")
     ),
+    
     mainPanel(
-      plotlyOutput("total_flux_plot"),
-      tableOutput("count_table")
+      # Plot output
+      plotlyOutput("scatter_plot")
     )
   )
 )
 
+# Define server logic
 server <- function(input, output) {
-  # Read the data
-  processed_data <- read.csv("data/processed/processed_data.csv")
-
-# Define a custom theme for the plot (without vertical grid lines)
-my_theme <- theme_minimal() +
-  theme(
-    axis.text.y = element_text(size = 12),
-    axis.text.x = element_text(size = 12),
-    axis.title.y = element_text(size = 12, margin = margin(r = 15)),  # Adjust the margin
-    legend.text = element_text(size = 10),
-    legend.title = element_text(size = 12),
-    panel.grid.major.x = element_blank(),  # Remove vertical grid lines
-    panel.grid.minor.x = element_blank()   # Remove vertical minor grid lines
-  )
-
-  # Group by trt and imaging_date, and calculate the mean and median for each group
-  summary_data <- processed_data %>%
-    group_by(trt, imaging_date) %>%
-    summarise(mean_total_flux = mean(total_flux, na.rm = TRUE),
-              mean_avg_radiance = mean(avg_radiance, na.rm = TRUE),
-              median_total_flux = median(total_flux, na.rm = TRUE),
-              median_avg_radiance = median(avg_radiance, na.rm = TRUE)) %>%
-    mutate(imaging_date = as.Date(imaging_date))
-
-output$total_flux_plot <- renderPlotly({
-    y_var <- ifelse(input$y_variable == "total_flux", "Total Flux", "Average Radiance")
-    calculation_type <- input$calculation_type
-    facet_enabled <- input$facet_wrap
-    group_points_enabled <- input$group_points
-
-    plot_type <- input$plot_type
-    
-    # Filter data based on selected tumor injection
-    processed_data_filtered <- processed_data
-    if (!is.null(input$tumor_injection_select)) {
-      processed_data_filtered <- processed_data_filtered %>%
-        filter(tumor_injection == input$tumor_injection_select)
-    }
   
-    # Create the plot
-    p <- ggplot(data = processed_data, 
-                aes(x = as.Date(imaging_date), y = !!sym(input$y_variable), color = factor(trt))) +
-      labs(x = "Imaging Date", y = y_var, color = "Treatment") +
-      scale_color_manual(
-        name = "Treatment",
-        values = c(
-          "1" = alpha("#f8766d", 1),
-          "2" = alpha("#7cae00", 1),
-          "3" = alpha("#00bfc4", 1),
-          "4" = alpha("#C3B1E1", 1)
-        ),
-        labels = labels
-      ) +
-      scale_x_date(date_breaks = "1 month", date_labels = "%b %Y") +
-      my_theme
-
-# Add vertical lines
-vertical_lines <- data.frame(
-  date = c(inj_date, trt_date, eos_date),
-  text = c(
-    format(inj_date, format = "%m/%d/%Y"),
-    format(trt_date, format = "%m/%d/%Y"),
-    format(eos_date, format = "%m/%d/%Y")
-  )
-)
-
-# Add vertical lines
-if (plot_type == "Line Graph") {
-  for (i in 1:3) {
-    p <- p + geom_vline(data = vertical_lines[i, ], aes(xintercept = as.numeric(date), text = text))
-  }
-}
-    
-    # Conditional y-axis scaling
-    if (input$y_variable == "total_flux") {
-      p <- p + scale_y_log10(labels = scientific_format())
-    } else {
-      p <- p + scale_y_continuous()
+  # Load data
+  processed_data <- read.csv("data/processed/processed_data.csv") %>%
+  mutate(imaging_date = as.POSIXct(imaging_date, tz = "GMT")) %>%
+  mutate(days_from_trt = as.numeric(difftime(imaging_date, trt_date, units = "days"))) %>% 
+  relocate(days_from_trt, .before = imaging_date)
+  
+  # Create reactive dataset based on PDX and toggle selection
+  selected_data <- reactive({
+    data <- processed_data[processed_data$tumor_injection == input$pdx, ]
+    if (!input$include_non_study) {
+      data <- data[data$trt != "Non-study", ]
     }
-
-    if (calculation_type == "Mean") {
-      if (plot_type == "Line Graph") {
-        p <- p +
-          geom_line(data = summary_data, aes(x = imaging_date, y = !!sym(paste0("mean_", input$y_variable)), group = trt), linewidth = 0.9)
-      } else if (plot_type == "Bar Graph") {
-        if (facet_enabled) {
-          p <- p +
-            geom_bar(data = summary_data, aes(x = imaging_date, y = !!sym(paste0("mean_", input$y_variable)), fill = factor(trt)), stat = "identity")
-        } else {
-          p <- p +
-            geom_bar(data = summary_data, aes(x = imaging_date, y = !!sym(paste0("mean_", input$y_variable)), fill = factor(trt)), stat = "identity", position = "dodge")
-        }
-      }
-      grouped_points <- summary_data
-      point_variable <- paste0("mean_", input$y_variable)
-    } else if (calculation_type == "Median") {
-      if (plot_type == "Line Graph") {
-        p <- p +
-          geom_line(data = summary_data, aes(x = imaging_date, y = !!sym(paste0("median_", input$y_variable)), group = trt), linewidth = 0.9)
-      } else if (plot_type == "Bar Graph") {
-        if (facet_enabled) {
-          p <- p +
-            geom_bar(data = summary_data, aes(x = imaging_date, y = !!sym(paste0("median_", input$y_variable)), fill = factor(trt)), stat = "identity")
-        } else {
-          p <- p +
-            geom_bar(data = summary_data, aes(x = imaging_date, y = !!sym(paste0("median_", input$y_variable)), fill = factor(trt)), stat = "identity", position = "dodge")
-        }
-      }
-      grouped_points <- summary_data
-      point_variable <- paste0("median_", input$y_variable)
-    } else if (calculation_type == "Individual") {
-      if (plot_type == "Line Graph") {
-        p <- p +
-          geom_line(aes(group = id), alpha = 0.5, size = 0.5)
-      } else if (plot_type == "Bar Graph") {
-        # You can choose an appropriate way to represent individual data as bars
-        # For example, you can use geom_bar with fill based on trt
-      }
-      grouped_points <- processed_data %>%
-        group_by(trt, imaging_date) %>%
-        summarise(x = mean(as.Date(imaging_date)), y = mean(!!sym(input$y_variable))) %>%
-        ungroup()
-      point_variable <- paste0("mean_", input$y_variable)
-    }
-
-    # Toggle for grouping points
-    if (group_points_enabled) {
-      if (plot_type == "Line Graph") {
-        p <- p +
-          geom_point(data = grouped_points, size = 2, aes(x = imaging_date, y = !!sym(point_variable), color = factor(trt)))
-      } else if (plot_type == "Bar Graph") {
-        # You can choose an appropriate way to represent grouped data as bars
-        # For example, you can use geom_bar with fill based on trt
-      }
-    } else {
-      # Show individual points
-      if (plot_type == "Line Graph") {
-        p <- p +
-          geom_point(size = 2, shape = 16, alpha = 0.5, aes(text = id))
-      } else if (plot_type == "Bar Graph") {
-        # You can choose an appropriate way to represent individual data as bars
-        # For example, you can use geom_bar with fill based on trt
-      }
-    }
-
-    # Add facet_wrap if enabled
-    if (facet_enabled) {
-      p <- p + facet_wrap(~ trt)
-    }
-
-    # Convert ggplot to Plotly
-    ggplotly(p) %>%
-      layout(legend = list(orientation = "v", x = 1.05, y = 0.5), hovermode = "x+y")
+    data
   })
-output$count_table <- renderTable({
-  # Group the data by trt and imaging_date and calculate the count of id
-  count_data <- processed_data %>%
-    group_by(trt, imaging_date) %>%
-    summarise(id_count = n()) %>%
-    spread(key = trt, value = id_count, fill = 0)
+  
+  # Create scatter plot without facet wrap
+output$scatter_plot <- renderPlotly({
+  y_axis_title <- if (input$y_axis == "total_flux") "Flux [p/s]" else "Radiance [p/s/cm^2/sr]"
+  y_axis_label <- if (input$y_axis == "total_flux") "Flux" else "Radiance"
 
-  # Ensure that the count values are whole numbers with no decimal places
-  count_data <- count_data %>%
-    mutate(across(-imaging_date, ~ as.integer(.)))
+  # Calculate values based on the selected calculation type
+  if (input$calculation_type == "Individual") {
+    p <- selected_data() %>%
+      mutate(trt = reorder(trt, trt_factor)) %>%
+      group_by(trt, id) %>%
+      plot_ly(x = ~days_from_trt, y = ~get(input$y_axis),
+              type = 'scatter', mode = 'lines+markers',
+              color = ~trt, colors = pal,
+              marker = list(size = 10),
+              legendgroup = ~trt,
+              name = ~trt,
+              hoverinfo = "text",
+              text = ~paste("Imaging Date: ", imaging_date, "<br>ID: ", id, "<br>", y_axis_label, ": ", sprintf("%.2e", get(input$y_axis)))) %>%
+      layout(
+        yaxis = list(
+          type = "log",
+          title = y_axis_title
+        ),
+        xaxis = list(
+          type = "linear",
+          title = "Days from Treatment",
+          tickmode = "array",
+          tickvals = c(unique(selected_data()$days_from_trt), as.numeric(inj_date - trt_date)),
+          ticktext = c(as.character(unique(selected_data()$days_from_trt)),
+                       paste(as.numeric(inj_date - trt_date)))
+        ),
+        showlegend = TRUE,
+        legend = list(x = 1, y = 0.5, title = "Treatment"),
+        images = list(
+          source = src,
+          xref = "paper",
+          yref = "paper",
+          x = 0,
+          y = 1,
+          sizex = 0.2,
+          sizey = 0.2,
+          opacity = 0.8
+        ),
+        shapes = list(
+          list(type = "line", y0 = 0, y1 = 1, yref = "paper", x0 = as.numeric(inj_date - trt_date), x1 = as.numeric(inj_date - trt_date), line = list(color = "black", dash = "dot")),
+          list(type = "line", y0 = 0, y1 = 1, yref = "paper", x0 = as.numeric(eos_date - trt_date), x1 = as.numeric(eos_date - trt_date), line = list(color = "black", dash = "dot"))
+        )
+      ) %>%
+      config(scrollZoom = TRUE, modeBarButtonsToAdd = list('drawopenpath'))
+  } else {
+    data_summary <- selected_data() %>%
+      mutate(trt = reorder(trt, trt_factor)) %>%
+      group_by(days_from_trt, trt, imaging_date) %>%
+      summarise(y_value = ifelse(input$calculation_type == "Mean", mean(get(input$y_axis)),
+                                 median(get(input$y_axis))))
 
-  count_data
+    p <- data_summary %>%
+      group_by(trt) %>%
+      plot_ly(x = ~days_from_trt, y = ~y_value,
+              type = 'scatter', mode = 'lines+markers',
+              color = ~trt, colors = pal,
+              legendgroup = ~trt,
+              name = ~trt,
+              marker = list(size = 10),
+              hoverinfo = "text",
+              text = ~paste("Imaging Date: ", imaging_date, "<br>", y_axis_label, ": ", sprintf("%.2e", y_value))) %>%
+      layout(
+        yaxis = list(
+          type = "log",
+          title = y_axis_title
+        ),
+        xaxis = list(
+          type = "linear",
+          title = "Days from Treatment",
+          tickmode = "array",
+          tickvals = c(unique(data_summary$days_from_trt), as.numeric(inj_date - trt_date)),
+          ticktext = c(as.character(unique(data_summary$days_from_trt)),
+                       paste(as.numeric(inj_date - trt_date)))
+        ),
+        showlegend = TRUE,
+        legend = list(x = 1, y = 0.5, title = "Treatment"),
+        images = list(
+          source = src,
+          xref = "paper",
+          yref = "paper",
+          x = 0,
+          y = 1,
+          sizex = 0.2,
+          sizey = 0.2,
+          opacity = 0.8
+        ),
+        shapes = list(
+          list(type = "line", y0 = 0, y1 = 1, yref = "paper", x0 = as.numeric(inj_date - trt_date), x1 = as.numeric(inj_date - trt_date), line = list(color = "black", dash = "dot")),
+          list(type = "line", y0 = 0, y1 = 1, yref = "paper", x0 = as.numeric(eos_date - trt_date), x1 = as.numeric(eos_date - trt_date), line = list(color = "black", dash = "dot"))
+        )
+      ) %>%
+      config(scrollZoom = TRUE, modeBarButtonsToAdd = list('drawopenpath'))
+  }
+
+  p
 })
 }
 
+# Run the application
 shinyApp(ui, server)
 ```
 
@@ -535,6 +507,9 @@ file_path <- "data/imaging/processed/"
 # Get a list of all subdirectories one level deep within the specified directory
 subdirectories <- list.dirs(file.path(current_file_dir, file_path), full.names = TRUE, recursive = FALSE)
 
+# Sort the subdirectories in descending order
+subdirectories <- sort(subdirectories, decreasing = TRUE)
+
 # Loop through each subdirectory and generate HTML content
 for (subdirectory in subdirectories) {
   # Get the name of the current subdirectory
@@ -542,6 +517,9 @@ for (subdirectory in subdirectories) {
   
   # Get a list of .PNG files within the subdirectory
   png_files <- list.files(subdirectory, pattern = "\\.PNG$", full.names = TRUE, recursive = FALSE)
+  
+  # Sort the PNG files in descending order
+  png_files <- sort(png_files, decreasing = TRUE)
   
   # Create a container div for each subdirectory
   cat("<div style='text-align: center;'>")
@@ -609,34 +587,11 @@ combined_data$mass_date <- as.Date(combined_data$mass_date, format = "%m/%d/%Y")
 combined_data <- combined_data %>%
   arrange(mass_date)
 
-# Define colors for trt values
-trt_colors <- c(
-  "1" = alpha("#f8766d", 1),
-  "2" = alpha("#7cae00", 1),
-  "3" = alpha("#00bfc4", 1),
-  "4" = alpha("#C3B1E1", 1)
-)
-
 # Create a ggplot object with facetting by trt and grouping by id
-p <- ggplot(combined_data, aes(x = mass_date, y = mass, color = factor(trt), group = id)) +
+p <- ggplot(combined_data, aes(x = mass_date, y = mass, color = factor(id), group = id)) +
   geom_line() +
   geom_point() +
-  scale_color_manual(values = trt_colors) +
   facet_wrap(~trt, scales = "free", ncol = 2)  # Adjust ncol as needed
-
-# Add vertical lines
-vertical_lines <- data.frame(
-  date = c(inj_date, trt_date, eos_date),
-  text = c(
-    format(inj_date, format = "%m/%d/%Y"),
-    format(trt_date, format = "%m/%d/%Y"),
-    format(eos_date, format = "%m/%d/%Y")
-  )
-)
-
-for (i in 1:3) {
-  p <- p + geom_vline(data = vertical_lines[i, ], aes(xintercept = as.numeric(date), linetype = "dotted", color = "black", text = text))
-}
 
 # Convert ggplot to plotly
 p <- ggplotly(p)
@@ -718,76 +673,51 @@ processed_data %>%
 processed_data <- read.csv("data/processed/processed_data.csv")
 
 trt_means <- processed_data %>%
-  mutate(trt = factor(trt, levels = names(labels), labels = labels)) %>%
   filter(imaging_date == engraftment_imaging_date) %>%
-  group_by(trt) %>%
+  group_by(trt_factor, trt) %>%
   summarize(mean_total_flux = mean(total_flux))
 
 trt_means
 
-# Define colors for trt values
-trt_colors <- c(
-  "1" = alpha("#f8766d", 1),
-  "2" = alpha("#7cae00", 1),
-  "3" = alpha("#00bfc4", 1),
-  "4" = alpha("#C3B1E1", 1)
-)
+# Create the plot with hoverinfo and color
+plot <- processed_data %>% 
+  filter(imaging_date == engraftment_imaging_date) %>%
+  mutate(trt = reorder(trt, trt_factor)) %>%
+  plot_ly(x = ~reorder(trt, trt_factor), y = ~total_flux, type = 'scatter', mode = 'markers', 
+          color = ~as.factor(trt),  # Use color instead of marker
+          colors = pal,  # Define colors
+          text = ~paste("ID: ", id),
+          hoverinfo = "text+y")
 
-# Create the ggplot object with data filtering using subset and add jitter
-p <- ggplot() +
-  geom_point(data = trt_means, aes(x = factor(trt), y = mean_total_flux), 
-             size = 3, color = "blue") +
-  geom_point(data = subset(processed_data, imaging_date == engraftment_imaging_date), 
-             aes(x = factor(trt, levels = 1:number_of_groups, labels = labels), y = total_flux, color = factor(trt), label = id), 
-             size = 2, position = position_jitter(width = 0.2, height = 0)) +
-  scale_color_manual(values = trt_colors) +
-  labs(x = "trt", y = "Total Flux") +
-  theme_minimal()
+# Add title and axis labels
+plot <- plot %>% layout(xaxis = list(title = "Treatment"),
+                        yaxis = list(title = "Flux [p/s]"))
 
-ggplotly(p)
+# Display the plot
+plot
 ```
 
 ### Thawing Cells
 
 #### Tumor
 
-##### {pdx_name}
+##### na
 
-On %m/%d/%Y, # vials of EEE were thawed with a total cell count of #e6 cells and a viability of #%.
-There were #e6 cells per 1mL and that was suspended in #mL for a live total cell concentration of #e6 cells.
-# mice were injected with #e6 cells each at #uL.
-#e6 cells were in #mL from the original #mL suspension.
-# eppendorf tubes were used for exactly # injections.
-Each eppendorf tube had # injections with #mL of #e6 cells from the original #mL cell suspension and #mL of PBS was added to get a total eppendorf volume of #mL for each eppendorf tube.
+tbd
 
 #### Treatment
 
-##### AAA
+##### na
 
-On %m/%d/%Y, # vials of EEE were thawed with a total cell count of #e6 cells and a viability of #%.
-There were #e6 cells per 1mL and that was suspended in #mL for a live total cell concentration of #e6 cells.
-# mice were injected with #e6 cells each at #uL.
-#e6 cells were in #mL from the original #mL suspension.
-# eppendorf tubes were used for exactly # injections.
-Each eppendorf tube had # injections with #mL of #e6 cells from the original #mL cell suspension and #mL of PBS was added to get a total eppendorf volume of #mL for each eppendorf tube.
+tbd
 
-##### BBB
+##### na
 
-On %m/%d/%Y, # vials of EEE were thawed with a total cell count of #e6 cells and a viability of #%.
-There were #e6 cells per 1mL and that was suspended in #mL for a live total cell concentration of #e6 cells.
-# mice were injected with #e6 cells each at #uL.
-#e6 cells were in #mL from the original #mL suspension.
-# eppendorf tubes were used for exactly # injections.
-Each eppendorf tube had # injections with #mL of #e6 cells from the original #mL cell suspension and #mL of PBS was added to get a total eppendorf volume of #mL for each eppendorf tube.
+tbd
 
-##### CCC
+##### na
 
-On %m/%d/%Y, # vials of EEE were thawed with a total cell count of #e6 cells and a viability of #%.
-There were #e6 cells per 1mL and that was suspended in #mL for a live total cell concentration of #e6 cells.
-# mice were injected with #e6 cells each at #uL.
-#e6 cells were in #mL from the original #mL suspension.
-# eppendorf tubes were used for exactly # injections.
-Each eppendorf tube had # injections with #mL of #e6 cells from the original #mL cell suspension and #mL of PBS was added to get a total eppendorf volume of #mL for each eppendorf tube.
+tbd
 
 Column {.tabset data-width=500}
 -----------------------------------------------------------------------
@@ -796,80 +726,13 @@ Column {.tabset data-width=500}
 
 #### Mouse Current Status Plot
 
-```{r Current Status by Count and Treatment, message=FALSE, warning=FALSE, fig.height=6, fig.width=10}
-# Load data
-processed_data <- read.csv("data/processed/processed_data.csv")
-
-# Your summary table
-summary_table <- processed_data %>%
-  filter(!is.na(trt)) %>%
-  distinct(trt, id, .keep_all = TRUE) %>%
-  group_by(trt) %>%
-  summarize(
-    Dead = sum(!is.na(manner_of_death) & manner_of_death != ""),  # Count non-blank manner_of_death as dead
-    Alive = sum(ifelse(is.na(manner_of_death) | manner_of_death == "", 1, 0)),  # Count blank or NA manner_of_death as alive
-    Dead_ids = toString(id[!is.na(manner_of_death) & manner_of_death != ""]),
-    Alive_ids = toString(id[is.na(manner_of_death) | manner_of_death == ""])
-  )
-
-# Calculate total unique mice dead and alive
-total_dead <- sum(summary_table$Dead)
-total_alive <- sum(summary_table$Alive)
-
-# Create a grouped bar plot
-p <- ggplot(summary_table, aes(x = factor(trt, labels = labels))) +
-  geom_bar(aes(y = Alive, fill = "Alive"), stat = "identity", position = "dodge") +
-  geom_bar(aes(y = Dead, fill = "Dead"), stat = "identity", position = "dodge") +
-  scale_fill_manual(values = c("Dead" = "red", "Alive" = "green")) +  # Adjust fill colors
-  labs(x = "Treatment", y = "Count", fill = "Status") +
-  ggtitle("Dead and Alive Counts of Study Mice by Treatment") +
-  theme_minimal() +
-  theme(legend.position = "top",
-        panel.grid.major.x = element_blank(),
-        panel.grid.minor.x = element_blank(),
-        panel.grid.minor.y = element_blank())  # Remove horizontal grid lines between y-axis tick marks
-
-# Set x-axis breaks and limits using scale_x_discrete
-p <- p + scale_x_discrete(breaks = labels, limits = labels)
-
-# Set y-axis breaks and limits
-p <- p +
-  scale_y_continuous(
-    breaks = seq(0, max(summary_table$Dead, summary_table$Alive) + 2, by = 1),  # Set breaks dynamically
-    limits = c(0, max(summary_table$Dead, summary_table$Alive) + 4)  # Adjust the limits dynamically
-  )
-
-# Add annotations for alive and dead mouse numbers with color
-p <- p +
-  geom_text(data = summary_table, aes(x = factor(trt, labels = labels), 
-                y = Dead + Alive + 0.5, label = Alive_ids, color = "green"), 
-            size = 5, hjust = 0.5) +  
-  geom_text(data = summary_table, aes(x = factor(trt, labels = labels), 
-                y = Dead + Alive - 0.5, label = Dead_ids, color = "red"), 
-            size = 5, hjust = 0.5)  
-
-# Set legend labels including total counts
-p <- p +
-  labs(fill = paste("Status (Alive:", total_alive, ", Dead:", total_dead, ")"))
-
-# Specify the color scale for text labels
-p <- p +
-  scale_color_manual(values = c("red" = "red", "green" = "green"))
-
-# Remove the color legend for "Status"
-p <- p +
-  guides(color = "none")
-
-print(p)
-```
-
 ```{r Current Status by Cage and Treatment, message=FALSE, warning=FALSE, fig.height=6, fig.width=10}
 # Load data
 processed_data <- read.csv("data/processed/processed_data.csv")
 
 # Create a scatterplot for cage_number, trt, and status without overlap
 scatterplot <- processed_data %>%
-  select(cage_number, id, trt, manner_of_death) %>% 
+  arrange(manner_of_death) %>%  # Arrange data to ensure NA is at the end
   distinct(trt, id, .keep_all = TRUE) %>% 
   ggplot(aes(x = factor(cage_number), y = factor(trt, labels = labels))) +  # Use labels here
   geom_jitter(
@@ -879,7 +742,7 @@ scatterplot <- processed_data %>%
     alpha = 0.7
   ) +
   geom_text(
-    aes(label = id), 
+    aes(label = as.character(id)),
     position = position_dodge2(width = 0.5),  # Match the jitter width
     vjust = -1,  # Adjust vertical position to add space
     size = 3
@@ -888,12 +751,11 @@ scatterplot <- processed_data %>%
     values = c("Dead" = "red", "Alive" = "green")
   ) +
   labs(x = "Cage Number", y = "Treatment", color = "Status") +
-  ggtitle("Mouse Status by Cage and Treatment") +
   theme_minimal() +
   theme(legend.position = "top", 
         axis.text.x = element_text(size = 12, margin = margin(0, 40, 0, 40))) +  # Remove angle and adjust size
   guides(color = "none") +  # Remove the legend for "Status"
-  scale_x_discrete(breaks = unique(raw_data$cage_number))  # Set breaks for x-axis
+  scale_x_discrete(breaks = unique(processed_data$cage_number))  # Set breaks for x-axis
 
 print(scatterplot)
 ```
@@ -907,66 +769,72 @@ processed_data <- read.csv("data/processed/processed_data.csv")
 # Read the 'raw_mass.csv' file into a data frame
 raw_mass <- read.csv("data/raw/raw_mass.csv")
 
-# Convert 'mass_date' to date format with specified format
-raw_mass$mass_date <- as.Date(raw_mass$mass_date, format = "%m-%d-%Y")
-
 # Combine 'raw_mass' with 'processed_data'
 processed_data <- left_join(processed_data, raw_mass, by = "id")
 
 # Convert date columns to date format
-processed_data$imaging_date <- as.Date(processed_data$imaging_date)
-processed_data$mass_date <- as.Date(processed_data$mass_date)
-processed_data$death_date <- as.Date(processed_data$death_date)
+processed_data$imaging_date <- as.Date(processed_data$imaging_date, format="%m/%d/%Y")
+processed_data$mass_date <- as.Date(processed_data$mass_date, format="%m/%d/%Y")
+processed_data$death_date <- as.Date(processed_data$death_date, format="%m/%d/%Y")
+
+# Check if all mice are dead based on the 'manner_of_death' column
+all_dead <- all(!is.na(processed_data$manner_of_death))
 
 # Find the most recent imaging_date
 most_recent_imaging_date <- max(processed_data$imaging_date, na.rm = TRUE)
 
-# Find the oldest and newest mass_date for each mouse, excluding mice with missing mass_date
-mass_date_summary <- processed_data %>%
-  filter(!is.na(mass_date)) %>%
-  group_by(id) %>%
-  summarize(
-    oldest_mass_date = ifelse(all(is.na(mass_date)), NA, min(mass_date, na.rm = TRUE)),
-    newest_mass_date = ifelse(all(is.na(mass_date)), NA, max(mass_date, na.rm = TRUE))
-  )
+if (!all_dead) {
+  # Find the oldest and newest mass_date for each mouse, excluding mice with missing mass_date
+  mass_date_summary <- processed_data %>%
+    filter(!is.na(mass_date)) %>%
+    group_by(id) %>%
+    summarize(
+      oldest_mass_date = ifelse(all(is.na(mass_date)), NA, min(mass_date, na.rm = TRUE)),
+      newest_mass_date = ifelse(all(is.na(mass_date)), NA, max(mass_date, na.rm = TRUE))
+    )
 
-# Calculate the mass loss percentage for each mouse, excluding mice with missing mass_date
-mass_loss <- mass_date_summary %>%
-  mutate(
-    id = as.character(id),  # Convert id to character
-    mass_loss_percentage = (1 - newest_mass_date / oldest_mass_date) * 100
-  )
+  # Calculate the mass loss percentage for each mouse, excluding mice with missing mass_date
+  mass_loss <- mass_date_summary %>%
+    mutate(
+      id = as.character(id),  # Convert id to character
+      mass_loss_percentage = (1 - newest_mass_date / oldest_mass_date) * 100
+    )
 
-# Find mice with total_flux >= 2e10 from the most recent imaging_date
-high_flux_mice <- processed_data %>%
-  filter(imaging_date == most_recent_imaging_date,
-         total_flux >= 2e10,
-         is.na(death_date))
+  # Find mice with total_flux >= 2e10 from the most recent imaging_date
+  high_flux_mice <- processed_data %>%
+    filter(imaging_date == most_recent_imaging_date,
+           total_flux >= 2e10,
+           is.na(death_date))
 
-# Find mice meeting the mass loss criterion (20% or more loss)
-mass_loss_mice <- mass_loss %>%
-  filter(!is.na(oldest_mass_date), !is.na(newest_mass_date),  # Exclude mice with missing mass dates
-         mass_loss_percentage >= 20)
+  # Find mice meeting the mass loss criterion (20% or more loss)
+  mass_loss_mice <- mass_loss %>%
+    filter(!is.na(oldest_mass_date), !is.na(newest_mass_date),  # Exclude mice with missing mass dates
+           mass_loss_percentage >= 20)
 
-# Combine the two sets of mice that meet either criteria
-mice_to_euthanize <- union(high_flux_mice$id, mass_loss_mice$id)
+  # Combine the two sets of mice that meet either criteria
+  mice_to_euthanize <- union(high_flux_mice$id, mass_loss_mice$id)
 
-# Check if there are any mice to euthanize based on either criterion
-if (length(mice_to_euthanize) > 0) {
-  if (length(high_flux_mice$id) > 0) {
-    cat("With respect to the IACUC protocol, you need to euthanize mouse number(s) meeting the following criteria:\n")
-    cat("- Total flux greater than or equal to 2x10^10:", paste(high_flux_mice$id, collapse = ", "), "\n")
-  }
-  
-  if (length(mass_loss_mice$id) > 0) {
-    cat("- Mass loss of 20% or more:", paste(mass_loss_mice$id, collapse = ", "), "\n")
+  # Check if there are any mice to euthanize based on either criterion
+  if (length(mice_to_euthanize) > 0) {
+    if (length(high_flux_mice$id) > 0) {
+      cat("With respect to the IACUC protocol, you need to euthanize mouse number(s) meeting the following criteria:\n")
+      cat("- Total flux greater than or equal to 2x10^10:", paste(high_flux_mice$id, collapse = ", "), "\n")
+    }
+
+    if (length(mass_loss_mice$id) > 0) {
+      cat("- Mass loss of 20% or more:", paste(mass_loss_mice$id, collapse = ", "), "\n")
+    }
+  } else {
+    cat("No mice meet the criteria for euthanasia.")
   }
 } else {
-  cat("No mice meet the criteria for euthanasia.")
+  cat("All mice are dead. No further action is required.")
 }
 ```
 
 #### Comments
+
+na
 
 ### Cage Cards
 
@@ -1012,6 +880,7 @@ ui <- fluidPage(
   sidebarLayout(
     sidebarPanel(
       width = 2,  # Adjust the width here
+      checkboxInput("filter", "Include Non-Study Mice", value = FALSE),
       radioButtons("tissue", "Tissue:", choices = c("Spleen", "Marrow")),
     ),
     mainPanel(
@@ -1022,8 +891,12 @@ ui <- fluidPage(
 
 server <- function(input, output) {
   output$bar_plot <- renderPlotly({
-    filtered_data <- processed_data %>%
-      filter(id %in% filtered_mice)
+    filtered_data <- if (input$filter) {
+      processed_data
+    } else {
+      processed_data %>%
+        filter(trt == "Non-study")
+    }
     
     tissue_column <- if (input$tissue == "Spleen") "spleen_total_live_cell_count" else "marrow_total_live_cell_count"
     
@@ -1063,11 +936,7 @@ Column
 <verbatim>
 
 ```{r Descriptives, message=FALSE, warning=FALSE, comment=NA}
-processed_data <- read.csv("data/processed/processed_data.csv") %>%
-    filter(id %in% filtered_mice)
-
-# Create a factor variable using the predefined labels
-processed_data$trt <- factor(processed_data$trt, levels = names(labels), labels = labels)
+processed_data <- read.csv("data/processed/processed_data.csv")
 
 descriptives <- jmv::descriptives(
     formula = total_flux ~ imaging_date:trt,
@@ -1085,11 +954,7 @@ capture.output(descriptives, file = "data/processed/descriptives.txt", append = 
 ### ANOVA
 
 ```{r ANOVA, message=FALSE, warning=FALSE, comment=NA}
-processed_data <- read.csv("data/processed/processed_data.csv") %>%
-    filter(id %in% filtered_mice)
-
-# Create a factor variable using the predefined labels
-processed_data$trt <- factor(processed_data$trt, levels = names(labels), labels = labels)
+processed_data <- read.csv("data/processed/processed_data.csv")
 
 tryCatch(
   {
